# mbay-dict

./: .gitignore  README.md  mbay-dict.code-workspace  pyproject.toml
.devcontainer/: devcontainer.json
py/: pyproject.toml  workspace.toml
py/bases/mbay_dict/api/: __init__.py  core.py  schema.py
py/bases/mbay_dict/http/: __init__.py
py/components/mbay_dict/aws/: __init__.py  core.py
py/components/mbay_dict/core/: domain.py  models.py  serializers.py
py/components/mbay_dict/logging/: __init__.py  core.py
py/components/mbay_dict/schemas/: __init__.py  correction.py
py/data/entities/: entries.json  examples.json
py/development/notebooks/: eda.ipynb  eda_raw_file.ipynb  merge_datasets.ipynb
py/development/notebooks/ai/: dataprep.ipynb  playground.ipynb  train.ipynb
py/development/tasks/: 7_format_data.py
py/development/tasks/translate_web_html/: 3_merge_files.py
py/development/tasks/translate_xml/: 1_clean_xml.py  3_format_items.py  4_upload_to_mongo.py  5_download_sound_files.py
py/tasks/: 4_download_sound_files.py  6_fix_fr_errors.py
py/test/components/mbay_dict/schemas/: test_core.py
scripts/: create_en_dict.py
ts/: package.json  pnpm-lock.yaml
ts/apps/cloud/: package.json  sst.config.ts
ts/apps/cloud/stacks/: main.ts
ts/apps/web/: .gitignore  docker-compose.yml  neon-vite-plugin.ts  next.config.js  package.json  sst-env.d.ts  tailwind.config.js  tsconfig.json  vite.config.ts
ts/apps/web/app/: layout.tsx  loading.tsx  page.tsx
ts/apps/web/components/: back-button.tsx  dictionary.tsx  entries.tsx  entry-card.tsx  examples-collapsible.tsx  examples.tsx  expressions.tsx  letter-group.tsx  letter-scroll.tsx  loading.tsx  main-nav-item.tsx  main-nav.tsx  memorial.tsx  page-container.tsx  search-bar.tsx  search-result.tsx  site-header.tsx  sound-button.tsx  tooltip-text.tsx
ts/apps/web/config/: site.ts
ts/apps/web/db/: init.sql
ts/apps/web/drizzle/: 0000_0000_baseline.sql  0001_0001_extensions_and_generated_columns.sql
ts/apps/web/lib/: constants.ts  data.ts  db.ts  env.ts  utils.ts
ts/cloud/: sst.config.ts  utils.ts
ts/cloud/stacks/: main.ts
(+53 files in other folders)
