[tool.poetry]
name = "mbay-dict"
version = "0.1.0"
description = ""
authors = ["Ndil-Adjim  Sou Ngadoy <nasoungadoy@gmail.com>"]
readme = "README.md"
packages = [
    { include = "mbay_dict/http", from = "bases" },
    { include = "mbay_dict/api", from = "bases" },
    { include = "mbay_dict/core", from = "components" },
    { include = "mbay_dict/logging", from = "components" },
    { include = "mbay_dict/aws", from = "components" },
    { include = "development" },
]


[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
pydantic = "^2.1.1"
httpx = "^0.24.1"
tenacity = "^8.2.2"
python-dotenv = "^1.0.0"
more-itertools = "^10.1.0"
jsonlines = "^3.1.0"
llama-cpp-python = "^0.1.77"
clipboard = "^0.0.4"
langchain = "^0.0.268"
instructor = "^0.2.4"
pandas = "^2.0.3"
transformers = "^4.32.0"
datasets = "^2.14.4"
evaluate = "^0.4.0"
sacrebleu = "^2.3.1"
pymongo = "^4.5.0"
xsdata = {extras = ["cli", "lxml", "soap"], version = "^23.8"}
dbfread = "^2.0.7"
structlog = "^23.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
jupyterlab = "^4.0.4"
ruff = "^0.0.283"
colorama = "^0.4.6"
rich = "^13.5.2"
ipython = "^8.14.0"
aws-lambda-powertools = "^2.22.0"
bump-pydantic = "^0.6.1"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
